--- a/assignment_6.ipynb
+++ b/assignment_6.ipynb
@@ -26,10 +26,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['civic', 'ana']\n",
+      "['nurses run', 'Nurses Run', 'madam', 'Stats']\n"
+     ]
+    }
+   ],
+   "source": [
+    "i1 = ['civic', 'Lambda', 'Python', 'QTM', 'Java', 'ana']\n",
+    "i2 = ['nurses run', 'Nurses Run', 'madam', 'Stats', 'World', 'what']\n",
+    "def palindrome(n):\n",
+    "    n1=[]\n",
+    "    for i in n:\n",
+    "        s=i.replace(' ','')\n",
+    "        l=s.lower()\n",
+    "        if l==l[::-1]:\n",
+    "            n1.append(i)\n",
+    "    print(n1)\n",
+    "palindrome(i1)\n",
+    "palindrome(i2)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -48,10 +70,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum of the positive numbers:  48\n",
+      "Sum of the negative numbers:  -32\n"
+     ]
+    }
+   ],
+   "source": [
+    "l= [2, 4, -6, -9, 11, -12, 14, -5, 17]\n",
+    "positive=list(filter(lambda x: x>0, l))\n",
+    "negative=list(filter(lambda x: x<0, l))\n",
+    "print('Sum of the positive numbers: ',sum(positive))\n",
+    "print('Sum of the negative numbers: ',sum(negative))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -72,17 +109,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original list:  ['I', 'love', 3, 2, 4, 5, 'Python', 12]\n",
+      "Maximum value:  12\n",
+      "Minimum value:  2\n",
+      "Average value:  5.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "ol= ['I', 'love', 3, 2, 4, 5, 'Python', 12]\n",
+    "numbers=list(filter(lambda x: type(x)==int, ol))\n",
+    "print('Original list: ',ol)\n",
+    "print('Maximum value: ',max(numbers))\n",
+    "print('Minimum value: ',min(numbers))\n",
+    "mean=sum(numbers)/len(numbers)\n",
+    "print('Average value: ',mean)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.5 ('base')",
+   "display_name": "conda_amazonei_mxnet_p36",
    "language": "python",
-   "name": "python3"
+   "name": "conda_amazonei_mxnet_p36"
   },
   "language_info": {
    "codemirror_mode": {
@@ -94,7 +150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.13"
   },
   "vscode": {
    "interpreter": {
