--- a/assignment_6.ipynb
+++ b/assignment_6.ipynb
@@ -26,31 +26,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['civic', 'ana']\n",
-      "['nurses run', 'Nurses Run', 'madam', 'Stats']\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['nurses run', 'Nurses Run', 'madam', 'Stats']"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "i1 = ['civic', 'Lambda', 'Python', 'QTM', 'Java', 'ana']\n",
-    "i2 = ['nurses run', 'Nurses Run', 'madam', 'Stats', 'World', 'what']\n",
-    "def palindrome(n):\n",
-    "    n1=[]\n",
-    "    for i in n:\n",
-    "        s=i.replace(' ','')\n",
-    "        l=s.lower()\n",
-    "        if l==l[::-1]:\n",
-    "            n1.append(i)\n",
-    "    print(n1)\n",
-    "palindrome(i1)\n",
-    "palindrome(i2)\n"
+    "input1 = ['civic', 'Lambda', 'Python', 'QTM', 'Java', 'ana']\n",
+    "input2 = ['nurses run', 'Nurses Run', 'madam', 'Stats', 'World', 'what']\n",
+    "\n",
+    "list(filter(lambda c: c==c[::-1], input1))\n",
+    "list(filter(lambda c: (c.replace(' ','').lower()==c[::-1].replace(' ','').lower()), input2))"
    ]
   },
   {
@@ -70,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -132,6 +127,13 @@
     "mean=sum(numbers)/len(numbers)\n",
     "print('Average value: ',mean)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
