--- a/assignment_6.ipynb
+++ b/assignment_6.ipynb
@@ -26,7 +26,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['civic', 'ana']"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input2 = ['nurses run', 'Nurses Run', 'madam', 'Stats', 'World', 'what']\n",
+    "list(filter(lambda c: c==c[::-1], input1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -35,16 +56,13 @@
        "['nurses run', 'Nurses Run', 'madam', 'Stats']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "input1 = ['civic', 'Lambda', 'Python', 'QTM', 'Java', 'ana']\n",
     "input2 = ['nurses run', 'Nurses Run', 'madam', 'Stats', 'World', 'what']\n",
-    "\n",
-    "list(filter(lambda c: c==c[::-1], input1))\n",
     "list(filter(lambda c: (c.replace(' ','').lower()==c[::-1].replace(' ','').lower()), input2))"
    ]
   },
@@ -65,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
